# zen

./: .clang-tidy  meson.build
.github/PULL_REQUEST_TEMPLATE/: new_feature.md
clients/: box.cc  meson.build
common/cpp/: meson.build
common/cpp/include/zen-common/cpp/: logger.h
common/cpp/src/: logger.cc
desktop-bar/: meson.build
desktop-bar/src/: main.cc
doc/: CONTRIBUTING.adoc
include/zen/: board.h  data-source.h  immersive-renderer.h  ray-data-device.h  ray-data-offer.h  ray-data-source.h  server.h
include/zen/appearance/: board.h
include/zen/backend/: immersive.h
include/zen/input/: seat.h
include/zen/scene/: camera.h
include/zen/screen/: output.h
include/zen/ui/: layout-constants.h
include/zen/wlr/: data-device-manager.h  data-device.h  data-offer.h  data-source.h
src/backend/drm/: backend.c  kms.c  kms.h
zen/: board.c  data-source.c  immersive-renderer.c  main.c  meson.build  ray-data-device.c  ray-data-offer.c  ray-data-source.c  scene.c  server.c
zen-util/include/: zen-util.h
zen/backend/openvr/: camera.cc  camera.h  gl-helper.h  meson.build  (+5 more)
zen/input/: seat.c
zen/scene/: camera.c  scene.c
zen/screen/: output.c  renderer.c
zen/ui/: zigzag-layout.c
zen/wlr/: data-device-manager.c  data-device.c  data-offer.c  data-source.c
zgnroot/src/: gl-base-technique.c
zigzag/src/: node.c
zna/: board.c  board.h  meson.build
zna/board/: nameplate.c  nameplate.h  plane-unit.c  plane-unit.h
zns/: meson.build
zns/src/: board-nameplate.c  board.c  bounded-nameplate.c  bounded.c  expansive.c  node.c  seat-capsule.c  shell.c
(+24 files in other folders)
